--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body{
     margin: 0;
     padding: 0;
+    background: #000;
 }
 
 section{
     height: 100vh;
     background: #000;
+}
+
+video{
+    object-fit: cover;
+    width: 1300px;
 }
 
 h1{
@@ -39,4 +45,32 @@ h1 span{
         transform: rotateY(0deg);
         filter: blur(0);
     }
+}
+
+h1 span:nth-child(1){
+    animation-delay: 1s;
+}
+h1 span:nth-child(2){
+    animation-delay: 1.5s;
+}
+h1 span:nth-child(3){
+    animation-delay: 2s;
+}
+h1 span:nth-child(4){
+    animation-delay: 2.5s;
+}
+h1 span:nth-child(5){
+    animation-delay: 3s;
+}
+h1 span:nth-child(6){
+    animation-delay: 3.5s;
+}
+h1 span:nth-child(7){
+    animation-delay: 4s;
+}
+h1 span:nth-child(8){
+    animation-delay: 4.5s;
+}
+h1 span:nth-child(9){
+    animation-delay: 5s;
 }
